--- a/Server/package.json
+++ b/Server/package.json
@@ -11,16 +11,21 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.4.2",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
-    "prisma": "^5.4.2"
+    "http2-express-bridge": "^1.0.7",
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.4.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
     "@types/node": "^20.8.6",
+    "@types/spdy": "^3.4.7",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
