--- a/Server/package.json
+++ b/Server/package.json
@@ -27,6 +27,7 @@
     "vitest-mock-extended": "^1.3.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
     "@types/jsonwebtoken": "^9.0.5",
