--- a/Server/package.json
+++ b/Server/package.json
@@ -15,12 +15,12 @@
   "dependencies": {
     "@prisma/client": "^5.4.2",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
-    "http2-express-bridge": "^1.0.7",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.4.2",
     "uuid": "^9.0.1",
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
     "@types/jsonwebtoken": "^9.0.5",
