--- a/Server/tsconfig.json
+++ b/Server/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "baseUrl": ".",
         "target": "es2015",
         "module": "commonjs",
         "strict": true
