--- a/Client/package.json
+++ b/Client/package.json
@@ -13,8 +13,10 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
+    "jwt-decode": "^4.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-cookie": "^7.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
