--- a/Client/package.json
+++ b/Client/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
-    "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
@@ -20,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
+    "react-type-animation": "^3.2.0",
     "redux": "^5.0.1"
   },
   "devDependencies": {
