--- a/Server/tsconfig.build.json
+++ b/Server/tsconfig.build.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "baseUrl": ".",
         "outDir": "./build",
-        "target": "es2015",
+        "target": "ES2021",
         "module": "commonjs",
         "skipLibCheck": true,
         "strict": true
