--- a/Client/package.json
+++ b/Client/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "ts-coverage": "typescript-coverage-report",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -33,6 +34,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
+    "typescript-coverage-report": "^0.8.0",
     "vite": "^5.0.8"
   }
 }
