--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
             - mynetwork
         ports:
             - "8080:8080"
+        depends_on:
+            - db
 
 networks:
     mynetwork:
