--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
         npm run build
 
   build:
+    needs: gulp
 
     runs-on: ubuntu-latest
 
@@ -42,6 +43,7 @@ jobs:
       run: docker rmi my-image-name:$(date +%s)
 
   deploy:
+    needs: build
 
     runs-on: ubuntu-latest
 
