--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [18.x]
 
     steps:
     - uses: actions/checkout@v3
@@ -29,30 +29,37 @@ jobs:
 
   build:
     needs: gulp
-
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Build Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
-    - name: Clean up
-      run: docker rmi my-image-name:$(date +%s)
+      - name: Install dependencies and run Gulp build
+        run: |
+          npm install
+          npm run gulp build
+
+      - name: Build Docker image
+        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+
 
   deploy:
     needs: build
-
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Docker Compose
-      run: docker-compose -f docker-compose.yml up -d
+      - name: Set up Docker Compose
+        run: |
+          docker-compose -f docker-compose.yml up -d
+          sleep 10
+          docker exec -it mycontainername npm run node:start:migrate:prod
 
-    - name: Clean up
-      run: docker system prune -f
+      - name: Clean up
+        run: docker system prune -f
