--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
           npm run build
 
       - name: Build Docker image
-        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        run: docker build . --file Dockerfile -t feral113/blog:latest
 
 
   deploy:
@@ -66,7 +66,7 @@ jobs:
           npm run build
 
       - name: Build Docker image
-        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        run: docker build . --file Dockerfile -t feral113/blog:latest
 
       - name: Run docker compose
         run: docker compose up
