--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,8 @@ on:
 
 jobs:
   gulp:
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
+    runs-on: self hosted
 
     strategy:
       matrix:
@@ -29,7 +30,9 @@ jobs:
 
   build:
     needs: gulp
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
+    runs-on: self hosted
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
