feat: create eslint rules

--- a/Server/.eslintrc.json
+++ b/Server/.eslintrc.json
@@ -1,21 +1,19 @@
 {
-    "root": true,
-    "parser": "@typescript-eslint/parser",
-    "plugins": [
-        "@typescript-eslint"
-    ],
+	"root": true,
+	"parser": "@typescript-eslint/parser",
+	"plugins": ["@typescript-eslint"],
 
-    "parserOptions": {
-        "project": "./tsconfig.json"
-    },
+	"parserOptions": {
+		"project": "./tsconfig.json"
+	},
 
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/eslint-recommended",
-        "plugin:@typescript-eslint/recommended"
-    ],
+	"extends": [
+		"eslint:recommended",
+		"plugin:@typescript-eslint/eslint-recommended",
+		"plugin:@typescript-eslint/recommended"
+	],
 
-    "rules": {
-        "no-useless-catch": "off"
-    }
+	"rules": {
+		"no-useless-catch": "off"
+	}
 }
