--- a/Server/package.json
+++ b/Server/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.3.0",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.4.2",
