--- a/Client/package.json
+++ b/Client/package.json
@@ -11,17 +11,14 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@reduxjs/toolkit": "^2.0.1",
 		"axios": "^1.6.2",
 		"jwt-decode": "^4.0.0",
 		"normalize.css": "^8.0.1",
 		"react": "^18.2.0",
 		"react-cookie": "^7.0.1",
 		"react-dom": "^18.2.0",
-		"react-redux": "^9.0.4",
 		"react-router-dom": "^6.21.1",
-		"react-type-animation": "^3.2.0",
-		"redux": "^5.0.1"
+		"react-type-animation": "^3.2.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.48",
