--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,7 @@
 		"react": "^18.2.0",
 		"react-cookie": "^7.0.1",
 		"react-dom": "^18.2.0",
+		"react-markdown": "^9.0.1",
 		"react-router-dom": "^6.21.1",
 		"react-type-animation": "^3.2.0"
 	},
