--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "gulp-exec": "^5.0.0"
   },
   "dependencies": {
-    "ncp": "^2.0.0",
-    "react-markdown": "^9.0.1"
+    "ncp": "^2.0.0"
   }
 }
