--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,4 +15,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Deploy with Docker Compose
-        run: dokcer compose up
+        run: docker compose up
