--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,10 @@ on:
     pull_request:
       branches: [ "main" ]
 
+concurrency:
+    group: "pages"
+    cancel-in-progress: false
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
