fix github pages deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,5 +22,5 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Deploy with Docker Compose
-        run: docker compose up
+    #   - name: Deploy with Docker Compose
+    #     run: docker compose up
