--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
   deploy:
     environment:
         name: github-pages
-        url: blogpage
+        url: https://github.ra334.blog.com
 
     runs-on: ubuntu-latest
 
