--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Deploy with Docker Compose
-        run: docker compose up
+        run: docker compose up -d
