--- a/Server/package.json
+++ b/Server/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "dev": "nodemon app.ts",
     "start": "node app.js",
-    "start:migrate:prod": "dotenv -e .env.production -- npx prisma migrate deploy && npm run start",
+    "start:migrate:prod": "dotenv -e .env.production -- npx prisma migrate dev --name init && npm run start",
     "test": "vitest",
     "build": "tsc --project tsconfig.build.json",
-    "production": "npm install --production && prisma generate && npx prisma migrate dev --create-only",
+    "production": "npm install --production && prisma generate",
     "lint": "eslint . --ext .ts",
     "lint-and-fix": "eslint . --ext .ts --fix"
   },
