--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,3 +33,22 @@ jobs:
 
       - name: Push to Docker Hub
         run: docker push feral113/blog:latest
+
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
+      - name: Deploy to server
+        run: |
+          echo "Starting deployment..."
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{secrets.SSH_USERNAME}}@${{secrets.SSH_HOST}} "cd /home/${{secrets.SSH_USERNAME}}/Blog && git pull && docker stop blog-app-1 && docker rm blog-app-1 && docker compose pull && docker compose up"
+          echo "Deployment completed."
