--- a/Server/.env.production
+++ b/Server/.env.production
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=postgres"
+DATABASE_URL="postgresql://postgres:postgres@db:5432/postgres?schema=postgres"
 PRIVATE_KEY="superPuperKey"
