--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,11 +45,10 @@ jobs:
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          cat ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
       - name: Deploy to server
         run: |
           echo "Starting deployment..."
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -p ${{secrets.SSH_PORT}} "${{ secrets.SSH_USERNAME }}"@"${{ secrets.SSH_HOST }}" "cd /home/${{ secrets.SSH_USERNAME }}/Blog && git pull && docker stop blog-app-1 && docker rm blog-app-1 && docker compose pull && docker compose up -d"
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no -p ${{secrets.SSH_PORT}} "${{ secrets.SSH_USERNAME }}"@"${{ secrets.SSH_HOST }}" "cd /home/${{ secrets.SSH_USERNAME }}/Blog && git pull && docker stop blog-app-1 && docker rm blog-app-1 && docker compose pull && docker compose up -d && mkdir sshSecret && cd sshSecret && echo "${{ secrets.SSH_PRIVATE_KEY }}" > ./test.pum"
           echo "Deployment completed."
