--- a/Client/package.json
+++ b/Client/package.json
@@ -11,8 +11,10 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@million/lint": "^0.0.62",
 		"axios": "^1.6.2",
 		"jwt-decode": "^4.0.0",
+		"million": "^3.0.4",
 		"normalize.css": "^8.0.1",
 		"react": "^18.2.0",
 		"react-cookie": "^7.0.1",
