--- a/Client/package.json
+++ b/Client/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@million/lint": "^0.0.62",
 		"axios": "^1.6.2",
+		"buffer": "^6.0.3",
 		"jwt-decode": "^4.0.0",
 		"million": "^3.0.4",
 		"normalize.css": "^8.0.1",
@@ -24,6 +25,7 @@
 		"react-type-animation": "^3.2.0"
 	},
 	"devDependencies": {
+		"@types/node": "^20.11.25",
 		"@types/react": "^18.2.48",
 		"@types/react-dom": "^18.2.18",
 		"@types/react-redux": "^7.1.33",
