--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,14 +35,13 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker buildx build --platform linux/amd64,linux/arm64 --file Dockerfile -t feral113/blog:latest .
+          docker buildx build --platform linux/amd64,linux/arm64 --file Dockerfile -t feral113/blog:latest . --push .
 
       - name: Log in to Docker Hub
         run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Push to Docker Hub
-        run: docker push feral113/blog:latest
-
+      # - name: Push to Docker Hub
+      #   run: docker push feral113/blog:latest
 
   deploy:
     name: Deploy
