add cookie parameters

--- a/Server/.env.example
+++ b/Server/.env.example
@@ -1,2 +1,5 @@
 DATABASE_URL="postgresql://postgres:postgres@db:5432/postgres?schema=postgres"
-PRIVATE_KEY="superPuperKey"
+PRIVATE_KEY=""
+
+# if you run locally set HTTP_ONLY false, if you run in production set HTTP_ONLY true
+HTTP_ONLY=""
