--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,8 @@ jobs:
 
       - name: Create .env.production file
         run: |
-          echo "DATABASE_URL=\"${{secrets.ENV_PROD_DB}}"" > Server/.env.production
-          echo "PRIVATE_KEY=\"${{secrets.ENV_PROD_PRIVATE_KEY}}\"" >> Server/.env.production
+          echo "DATABASE_URL='${{ secrets.ENV_PROD_DB }}'" > Server/.env.production
+          echo "PRIVATE_KEY='${{ secrets.ENV_PROD_PRIVATE_KEY }}'" >> Server/.env.production
           echo "HTTP_ONLY=true" >> Server/.env.production
 
       - name: Install dependencies and run Gulp build
